# ted

./: Cargo.toml  README.md  TODO.md
assets/: HELP.md
assets/themes/: ted.tmTheme
src/: main.rs
src/ted/: buffer.rs  buffer_widget.rs  buffers.rs  cached_highlighter.rs  command.rs  config.rs  mod.rs  ring_buffer.rs
