[package]
name = "ted"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.3.1"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
syntect = "4.4"
serde_json = "1.0"